--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,19 @@
+@font-face {
+  font-family: "SF Pro";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
 
+
+:root {
+  --orange: #FF5500;
+  --light-orange: #FFA375;
+  --white: #FFFFFF;
+  --almost-white: #F5F5F5;
+  --input-border: #E1E3E6;
+  --text-primary: #1B1F23;
+  --text-tertiary: #999FA6;
+}
 
 * {
   box-sizing: border-box;
@@ -8,8 +23,13 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
+  height: 100vh;
   overflow-x: hidden;
+  background-color: var(--almost-white);
+  font-size: 16px;
+  color: #1B1F23;
+  line-height: 1.5rem;
 }
 
 a {
@@ -17,95 +37,134 @@ a {
   text-decoration: none;
 }
 
-
-/* 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
-
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+ul, li {
+   margin: 0;
+   padding: 0;
+   text-indent: 0;
+   list-style: none;
+   list-style-type: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+#modal .modal-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 9999;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+  width: 100%;
+  height: 100%;
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+  background-color: #00000088;
+}
+
+.page-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header-main-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.fh {
+  display: flex;
+  flex-direction: row;
+}
+
+.fv {
+  display: flex;
+  flex-direction: column;
+}
+
+.g0-5 {
+  gap: 1rem;
+}
+.g1 {
+  gap: 0.5rem;
+}
+.g1-5 {
+  gap: 1.5rem;
+}
+.g2 {
+  gap: 2rem;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  align-content: stretch;
+  height: 100%;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  width: 100%;
+  height: 100%;
+  padding: 1.5rem 2rem;
+}
+
+.card {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  padding: 1.5rem;
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.spinner {
+  width: 48px;
+  height: 48px;
+  border: 3px solid #FFF;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: spinnerrotation 1s linear infinite;
+}
+.spinner::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid;
+  border-color: var(--orange) transparent;
+}
+
+@keyframes spinnerrotation {
+  0% {
+    transform: rotate(0deg);
   }
-} */
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+
+.unblur {
+  animation: unblur 1s linear;
+}
+
+@keyframes unblur {
+  from {
+    filter: blur(20px);
+  }
+  to {
+    filter: blur(0);
+  }
+}
