--- a/app/components/TicketCard.module.css
+++ b/app/components/TicketCard.module.css
@@ -53,3 +53,25 @@
   top: 0px;
   right: 0px;
 }
+
+.deleteButton {
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  line-height: 1px;
+  font-size: 1px;
+  padding: 4px;
+  min-height: 1px;
+  border-radius: 4px;
+  border: 0;
+  background-color: transparent;
+}
+
+.deleteButtonIcon {
+  width: 12px;
+  height: 12px;
+  background-color: #333;
+  -webkit-mask: url('/icons/close.svg') no-repeat center;
+  mask: url('/icons/close.svg') no-repeat center;
+}
